test_cases/pass/p14.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT a, b
a=0
b=0
REPEAT WHEN (a < 3)
START REPEAT
    a=a+1
END REPEAT
PRINT: a
END SCRIPT
