test_cases/fail/f38.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT a, b
DECLARE BOOL r
a=3
b=5
r=(a AND b)
END SCRIPT
